tests/fixtures/valid/app/valid-has.php
<?php

use Illuminate\Support\Facades\Config;

echo Config::has('app.valid_key');
