tests/fixtures/invalid/app/invalid-has.php
<?php

use Illuminate\Support\Facades\Config;

echo Config::has('app.invalid_key');
